--- a/src/app/modules/my-reservations-details/my-reservations-details.page.html
+++ b/src/app/modules/my-reservations-details/my-reservations-details.page.html
@@ -8,8 +8,9 @@
   <div class="container">
     <img [src]="reservationDaetails.image " />
   </div>
+  <app-custom-details></app-custom-details>
 
-  <div class="name-rating-container">
+  <!-- <div class="name-rating-container">
     <div class="name">
       <h5 class="fn-16 dalel-Bold"> {{reservationDaetails.name}}</h5>
     </div>
@@ -41,7 +42,7 @@
         {{reservationDaetails.unit}}/{{reservationDaetails.perUnit}}
       </p>
     </div>
-  </div>
+  </div> -->
 
   <div class="details">
     <h5 class="fn-14 dalel-Bold primary-color">
