--- a/src/app/modules/reservation-payment/reservation-payment.page.scss
+++ b/src/app/modules/reservation-payment/reservation-payment.page.scss
@@ -1,197 +1,180 @@
 .container {
-    margin-bottom: 10px;
-    img {
-      width: 100%;
-      height: 160px;
-      object-fit: cover;
-      object-position: initial;
-      border-radius: 10px;
+  margin-bottom: 10px;
+  img {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+    object-position: initial;
+    border-radius: 10px;
+  }
+}
+
+ion-button.button-disabled {
+  opacity: 1 !important;
+}
+
+ion-button {
+  margin: 0px;
+  ion-icon {
+    font-size: 16px;
+  }
+}
+
+ion-button::part(native) {
+  padding-inline-start: 10px !important;
+  padding-inline-end: 10px !important;
+}
+
+.name-rating-container {
+  display: flex;
+  justify-content: space-between;
+  .name,
+  .rating {
+    flex-direction: row;
+    h5 {
+      margin-top: 10px !important;
     }
   }
-  
-  ion-button.button-disabled {
-    opacity: 1 !important;
+}
+
+.nameandrating {
+  h5 {
+    margin: 10px 0;
   }
-  
-  ion-button {
-    margin: 0px;
+}
+.addressandprice {
+  p {
+    margin: 0px !important;
+  }
+
+  ion-col {
     ion-icon {
-      font-size: 16px;
+      font-size: 20px;
+      display: inline-block;
+      vertical-align: middle;
     }
   }
-  
-  ion-button::part(native) {
-    padding-inline-start: 10px !important;
-    padding-inline-end: 10px !important;
+  margin-bottom: 16px;
+}
+
+.details {
+  background-color: var(--ion-color-orange-light);
+  border-radius: 10px;
+  padding: 10px 12px;
+
+  p {
+    margin: 0px !important;
   }
-  
-  .name-rating-container{
-    display: flex;
-    justify-content: space-between;
-    .name, .rating{
-      flex-direction: row;
-      h5{
-        margin-top: 10px !important;
-      }
+  h5 {
+    margin: 0px !important;
+  }
+
+  .arrival {
+    img {
+      display: inline-block;
     }
   }
-  
-//   .address-price-container{
-//     margin-top: 13px;
-//     margin-bottom: 16px;
+
+  .arrival-date-spacer {
+    margin-top: 6px;
+  }
+  .left-date-spacer {
+    margin-top: 10px;
+  }
+  .margin-left {
+    margin-left: 6px;
+  }
+  .margin-right {
+    margin-right: 6px;
+  }
+}
+.btn-custom {
+  margin: 0 5%;
+  --color: var(--ion-color-white);
+  font-size: 16;
+  font-family: "Cairo-Bold";
+  height: 48px;
+}
+
+ion-button::part(native) {
+  height: 50px !important;
+  background-image: linear-gradient(
+    to left,
+    var(--ion-color-primary),
+    var(--ion-color-secondary)
+  );
+}
+
+// .item-details {
+//   ion-item::part(native) {
+//     text-align: center;
+//     padding-inline-end: 0px !important;
+//     padding-inline-start: 0px !important;
+
+//     .item-inner {
+//       --inner-border-width: 0px;
+//     }
+//   }
+//   .name-rating-container {
 //     display: flex;
 //     justify-content: space-between;
-//     align-items: center;
-//     .address, .price{
+//     .name {
 //       flex-direction: row;
-//       p{
-//         display: inline-block;
-//         margin: 0px;
+//       h5 {
+//         margin-top: 6px !important;
+//       }
+//     }
+//     .rating {
+//       .rating-address-container {
+//         display: flex;
+//         justify-content: space-between;
+//         align-items: center;
+//         div {
+//           flex-direction: row;
+//           display: flex;
+//         }
+
+//         .address-container {
+//           ion-icon {
+//             font-size: 18px;
+//             height: 20px;
+//           }
+//         }
+
+//         .rating-container {
+//           ion-icon {
+//             font-size: 12px;
+//           }
+//           span {
+//             margin: -6px 4px;
+//           }
+
+//           background-color: var(--ion-color-primary);
+//           border-radius: 5px;
+//           padding: 12px 6px;
+//         }
 //       }
 //     }
 //   }
-  
-  .nameandrating {
-    h5 {
-      margin: 10px 0;
-    }
-  }
-  .addressandprice {
-    p {
-      margin: 0px !important;
-    }
-  
-    ion-col {
-      //padding-top: 10px;
-      ion-icon {
-        font-size: 20px;
-        display: inline-block;
-        vertical-align: middle;
-      }
-    }
-    margin-bottom: 16px;
-  }
-  
-  .details {
-    background-color: var(--ion-color-orange-light);
-    border-radius: 10px;
-    padding: 10px 12px;
-  
-    p {
-      margin: 0px !important;
-    }
-    h5 {
-      margin: 0px !important;
-    }
-  
-    .arrival {
-      img {
-        display: inline-block;
-      }
-    }
-  
-    .arrival-date-spacer {
-      margin-top: 6px;
-    }
-    .left-date-spacer {
-      margin-top: 10px;
-    }
-    .margin-left{
-      margin-left: 6px;
-    }
-    .margin-right{
-      margin-right: 6px;
-    }
-  }
-  .btn-custom {
-    margin: 0 5%;
-    --color: var(--ion-color-white);
-    font-size: 16;
-    font-family: "Cairo-Bold";
-    height: 48px;
-  }
-  
-  ion-button::part(native) {
-    height: 50px !important;
-    background-image: linear-gradient(
-      to left,
-      var(--ion-color-primary),
-      var(--ion-color-secondary)
-    );
-  }
 
-  .item-details {
-    ion-item::part(native) {
-        text-align: center;
-        padding-inline-end: 0px !important;
-        padding-inline-start: 0px !important;
-      
-        .item-inner {
-          --inner-border-width: 0px;
-        }
-    }
-    .name-rating-container {
-      display: flex;
-      justify-content: space-between;
-      .name {
-        flex-direction: row;
-        h5 {
-          margin-top: 6px !important;
-        }
-      }
-      .rating {
-        .rating-address-container {
-          display: flex;
-          justify-content: space-between;
-          align-items: center;
-          div {
-            flex-direction: row;
-            display: flex;
-          }
-  
-          .address-container {
-            ion-icon {
-              font-size: 18px;
-              height: 20px;
-            }
-          }
-  
-          .rating-container {
-            ion-icon {
-              font-size: 12px;
-            }
-            span {
-              margin: -6px 4px;
-            }
-  
-            background-color: var(--ion-color-primary);
-            border-radius: 5px;
-            padding: 12px 6px;
-          }
-        }
-      }
-    }
-  
-    .address-price-container {
-       // margin: 13px 0 20px 0;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      .address,
-      .price {
-        flex-direction: row;
-        p {
-          display: inline-block;
-          margin: 0px;
-        }
-        ion-icon{
-            margin: 0px;
-        }
-      }
+//   .address-price-container {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     .address,
+//     .price {
+//       flex-direction: row;
+//       p {
+//         display: inline-block;
+//         margin: 0px;
+//       }
+//       ion-icon {
+//         margin: 0px;
+//       }
+//     }
 
-      .address >ion-label{
-        margin-bottom: 4px;
-      }
-    }
-  }
-  
+//     .address > ion-label {
+//       margin-bottom: 4px;
+//     }
+//   }
+// }
