--- a/src/app/components/custom-details/custom-details.component.html
+++ b/src/app/components/custom-details/custom-details.component.html
@@ -1,26 +1,26 @@
 <div class="item-details">
   <div class="name-rating-container">
     <div class="name">
-      <h5 class="fn-16 dalel-Bold"> {{reservationDaetails.name}}</h5>
+      <h5 class="fn-16 dalel-Bold"> {{ reservationDetails.name }}</h5>
     </div>
 
     <div class="rating">
       <div class="rating-address-container">
         <div class="rating-container">
           <ion-icon color="secondary" slot="start" name="star"></ion-icon>
-          <span class="white-color fn-12 dalel-Regular"
-            >{{reservationDaetails.rating}}</span
-          >
+          <span class="white-color fn-12 dalel-Regular">{{
+            reservationDetails.rating
+          }}</span>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="address-price-container">
-    <ion-item lines="none" class="address">
+  <div class="address-price-container" [ngClass]="isDetailed ? 'details' : 'notdetails'">
+    <ion-item lines="none" class="address" >
       <ion-label>
         <p class="fn-14 dalel-Regular dark-black-color">
-           {{reservationDaetails.city}} - {{reservationDaetails.address}}
+           {{ reservationDetails.city }} - {{ reservationDetails.address }}
         </p>
       </ion-label>
       <ion-icon slot="start" name="location-sharp" color="primary"></ion-icon>
@@ -31,8 +31,9 @@
         class="fn-10 dalel-Bold primary-color"
         [ngClass]="currentlangauge == 'ar' ? 'float-left' : 'float-right'"
       >
-         {{reservationDaetails.price}}
-        {{reservationDaetails.unit}}/{{reservationDaetails.perUnit}}
+         {{ reservationDetails.price }} {{ reservationDetails.unit }}/{{
+          reservationDetails.perUnit
+        }}
       </p>
     </div>
   </div>
