--- a/src/app/components/custom-details/custom-details.component.scss
+++ b/src/app/components/custom-details/custom-details.component.scss
@@ -1,74 +1,98 @@
 .item-details {
-    ion-item::part(native) {
-      text-align: center;
-      padding-inline-end: 0px !important;
-      padding-inline-start: 0px !important;
-  
-      .item-inner {
-        --inner-border-width: 0px;
+  .name-rating-container {
+    display: flex;
+    justify-content: space-between;
+    .name {
+      flex-direction: row;
+      h5 {
+        margin-top: 6px !important;
       }
     }
-    .name-rating-container {
-      display: flex;
-      justify-content: space-between;
-      .name {
-        flex-direction: row;
-        h5 {
-          margin-top: 6px !important;
-        }
-      }
-      .rating {
-        .rating-address-container {
+    .rating {
+      .rating-address-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        div {
+          flex-direction: row;
           display: flex;
-          justify-content: space-between;
-          align-items: center;
-          div {
-            flex-direction: row;
-            display: flex;
-          }
-  
-          .address-container {
-            ion-icon {
-              font-size: 18px;
-              height: 20px;
-            }
-          }
-  
-          .rating-container {
-            ion-icon {
-              font-size: 12px;
-            }
-            span {
-              margin: -6px 4px;
-            }
-  
-            background-color: var(--ion-color-primary);
-            border-radius: 5px;
-            padding: 12px 6px;
+        }
+
+        .address-container {
+          ion-icon {
+            font-size: 18px;
+            height: 20px;
           }
         }
-      }
-    }
-  
-    .address-price-container {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      .address,
-      .price {
-        flex-direction: row;
-        p {
-          display: inline-block;
-          margin: 0px;
+
+        .rating-container {
+          ion-icon {
+            font-size: 12px;
+          }
+          span {
+            margin: -6px 4px;
+          }
+
+          background-color: var(--ion-color-primary);
+          border-radius: 5px;
+          padding: 12px 6px;
         }
-        ion-icon {
-          margin: 0px;
-        }
-      }
-  
-      .address > ion-label {
-        margin-bottom: 6px;
       }
     }
   }
+
+  .address-price-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .address,
+    .price {
+      flex-direction: row;
+      p {
+        display: inline-block;
+        margin: 0px;
+      }
+      ion-icon {
+        margin: 0px;
+      }
+    }
+
+    .address > ion-label {
+      margin-bottom: 6px;
+    }
+
+    ion-item::part(native) {
+        text-align: center;
+        padding-inline-end: 0px !important;
+        padding-inline-start: 0px !important;
   
+        .item-inner {
+          --inner-border-width: 0px;
+        }
+      }
+
+    // .notdetails{
+    //     ion-item::part(native) {
+    //         text-align: center;
+    //         padding-inline-end: 0px !important;
+    //         padding-inline-start: 0px !important;
+      
+    //         .item-inner {
+    //           --inner-border-width: 0px;
+    //         }
+    //       }
+    // }
+    // .details{
+    //     ion-item::part(native) {
+    //         text-align: center;
+    //         padding-inline-end: 0px !important;
+    //         padding-inline-start: 0px !important;
+    //         background-color: var(--ion-color-orange-light) !important;
+
+    //         .item-inner {
+    //           --inner-border-width: 0px;
+    //         }
+    //       }
+    // }
+  }
+}
