--- a/src/app/modules/category-details/category-details.page.html
+++ b/src/app/modules/category-details/category-details.page.html
@@ -12,48 +12,13 @@
       [ngClass]="currentlangauge =='ar' ?'fav-ar':'fav-en' "
       [src]="itemDetails.isFav ? './../../../assets/icon/fav-active.svg' :'./../../../assets/icon/fav-inactive.svg'"
     ></ion-icon>
-   
+
     <div class="details-container ion-padding">
-      <app-custom-details></app-custom-details>
-
+      <app-custom-details
+        [reservationDetails]="itemDetails"
+        [isDetailed]="true"
+      ></app-custom-details>
     </div>
-
-    <!-- <div class="item-details ion-padding">
-      <div class="name-rating-container">
-        <div class="name">
-          <h5 class="fn-16 dalel-Bold"> {{itemDetails.name}}</h5>
-        </div>
-
-        <div class="rating">
-          <div class="rating-address-container">
-            <div class="rating-container">
-              <ion-icon color="secondary" slot="start" name="star"></ion-icon>
-              <span class="white-color fn-12 dalel-Regular"
-                >{{itemDetails.rating}}</span
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="address-price-container">
-        <div class="address">
-          <ion-icon name="location-sharp" color="primary"></ion-icon>
-          <p class="fn-14 dalel-Regular">
-             {{itemDetails.city}} - {{itemDetails.address}}
-          </p>
-        </div>
-
-        <div class="price">
-          <p
-            class="fn-10 dalel-Bold primary-color"
-            [ngClass]="currentlangauge == 'ar' ? 'float-left' : 'float-right'"
-          >
-             {{itemDetails.price}} {{itemDetails.unit}}/{{itemDetails.perUnit}}
-          </p>
-        </div>
-      </div>
-    </div> -->
   </div>
 
   <div class="services">
