--- a/src/app/modules/reservation-payment/reservation-payment.page.scss
+++ b/src/app/modules/reservation-payment/reservation-payment.page.scss
@@ -61,6 +61,7 @@ ion-button::part(native) {
   background-color: var(--ion-color-orange-light);
   border-radius: 10px;
   padding: 10px 12px;
+  margin-bottom: 12px;
 
   p {
     margin: 0px !important;
@@ -88,6 +89,53 @@ ion-button::part(native) {
     margin-right: 6px;
   }
 }
+
+.fees {
+  background-color: var(--ion-color-orange-light);
+  border-radius: 10px;
+  padding: 10px 12px;
+  margin-bottom: 16px;
+
+  h5 {
+    margin: 0px 0px 6px 0px;
+  }
+
+  .fees-details {
+      p{
+          margin: 0px;
+      }
+    display: flex;
+    justify-content: space-between;
+
+    div {
+      flex-direction: row;
+      p {
+        color: rgb(var(--ion-color-dark-black-rgb), 0.51);
+      }
+    }
+  }
+  .separator {
+    background-color: var(--ion-color-secondary);
+  }
+  .fees-total {
+    p{
+        margin: 0px;
+    }
+    display: flex;
+    justify-content: space-between;
+
+    div {
+      flex-direction: row;
+    }
+  }
+}
+
+.payment-method {
+  background-color: var(--ion-color-orange-light);
+  border-radius: 10px;
+  padding: 10px 12px;
+  margin-bottom: 16px;
+}
 .btn-custom {
   margin: 0 5%;
   --color: var(--ion-color-white);
@@ -104,77 +152,3 @@ ion-button::part(native) {
     var(--ion-color-secondary)
   );
 }
-
-// .item-details {
-//   ion-item::part(native) {
-//     text-align: center;
-//     padding-inline-end: 0px !important;
-//     padding-inline-start: 0px !important;
-
-//     .item-inner {
-//       --inner-border-width: 0px;
-//     }
-//   }
-//   .name-rating-container {
-//     display: flex;
-//     justify-content: space-between;
-//     .name {
-//       flex-direction: row;
-//       h5 {
-//         margin-top: 6px !important;
-//       }
-//     }
-//     .rating {
-//       .rating-address-container {
-//         display: flex;
-//         justify-content: space-between;
-//         align-items: center;
-//         div {
-//           flex-direction: row;
-//           display: flex;
-//         }
-
-//         .address-container {
-//           ion-icon {
-//             font-size: 18px;
-//             height: 20px;
-//           }
-//         }
-
-//         .rating-container {
-//           ion-icon {
-//             font-size: 12px;
-//           }
-//           span {
-//             margin: -6px 4px;
-//           }
-
-//           background-color: var(--ion-color-primary);
-//           border-radius: 5px;
-//           padding: 12px 6px;
-//         }
-//       }
-//     }
-//   }
-
-//   .address-price-container {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     .address,
-//     .price {
-//       flex-direction: row;
-//       p {
-//         display: inline-block;
-//         margin: 0px;
-//       }
-//       ion-icon {
-//         margin: 0px;
-//       }
-//     }
-
-//     .address > ion-label {
-//       margin-bottom: 4px;
-//     }
-//   }
-// }
