--- a/src/app/modules/favourites/favourites.page.scss
+++ b/src/app/modules/favourites/favourites.page.scss
@@ -60,5 +60,6 @@ ion-card {
   ion-card-content {
     padding: 4px 13px;
     background-color: rgba(var(--ion-color-secondary-rgb), 0.33);
+    margin-top: -3px;
   }
 }
