--- a/src/app/modules/favourites/favourites.page.html
+++ b/src/app/modules/favourites/favourites.page.html
@@ -18,6 +18,8 @@
           </div>
 
           <ion-card-content>
+
+            <!-- <app-custom-details [reservationDetails]="item"></app-custom-details> -->
             <div class="name">
               <p class="fn-14 dalel-Bold dark-black-color">{{item.name}}</p>
             </div>
