--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -91,6 +91,14 @@
   --ion-color-dark-shade: #1e2023;
   --ion-color-dark-tint: #383a3e;
 
+  /** gray-black **/
+  --ion-color-gray-black: #6b6b6b;
+  --ion-color-gray-black-rgb: 107, 107, 107;
+  --ion-color-gray-black-contrast: #ffffff;
+  --ion-color-gray-black-contrast-rgb: 255, 255, 255;
+  --ion-color-gray-black-shade: #5e5e5e;
+  --ion-color-gray-black-tint: #7a7a7a;
+
   /** medium **/
   --ion-color-medium: #92949c;
   --ion-color-medium-rgb: 146, 148, 156;
@@ -169,6 +177,7 @@
   --ion-color-shade: var(--ion-color-gray-black-shade);
   --ion-color-tint: var(--ion-color-gray-black-tint);
 }
+
 .ion-color-dark-black {
   --ion-color-base: var(--ion-color-dark-black);
   --ion-color-base-rgb: var(--ion-color-dark-black-rgb);
@@ -193,8 +202,12 @@
   color: var(--ion-color-dark-black) !important;
 }
 
-.gray-black-color{
-  color:var(--ion-color-gray-black) !important;
+.gray-black-color {
+  color: var(--ion-color-gray-black) !important;
+}
+
+.black-color{
+  color: var(--ion-color-dark-black) !important;
 }
 
 .fn-10 {
