--- a/src/app/modules/my-reservations-details/my-reservations-details.page.html
+++ b/src/app/modules/my-reservations-details/my-reservations-details.page.html
@@ -8,7 +8,7 @@
   <div class="container">
     <img [src]="reservationDetails.image " />
   </div>
-  <app-custom-details [reservationDetails]="reservationDetails"></app-custom-details>
+  <app-custom-details [reservationDetails]="reservationDetails" [isDetailed]="false"></app-custom-details>
 
   <div class="details">
     <h5 class="fn-14 dalel-Bold primary-color">
