--- a/src/app/modules/reservation-payment/reservation-payment.page.html
+++ b/src/app/modules/reservation-payment/reservation-payment.page.html
@@ -10,7 +10,7 @@
   </div>
 
   <app-custom-details
-    [reservationDetails]="reservationDetails"
+    [reservationDetails]="reservationDetails" [isDetailed]="false"
   ></app-custom-details>
 
   <div class="details">
