--- a/src/app/modules/reservation-payment/reservation-payment.page.scss
+++ b/src/app/modules/reservation-payment/reservation-payment.page.scss
@@ -149,6 +149,7 @@ ion-button::part(native) {
     --checkmark-color	:var(--ion-color-white);
     --border-radius	:3px;
     --size	:20px;
+    --border-color:var(--ion-color-secondary);
   }
 
   .align-right{
