--- a/src/app/components/custom-details/custom-details.component.scss
+++ b/src/app/components/custom-details/custom-details.component.scss
@@ -61,38 +61,46 @@
       margin-bottom: 6px;
     }
 
-    ion-item::part(native) {
-        text-align: center;
-        padding-inline-end: 0px !important;
-        padding-inline-start: 0px !important;
-  
-        .item-inner {
-          --inner-border-width: 0px;
-        }
-      }
+    // ion-item::part(native) {
+    //   text-align: center;
+    //   padding-inline-end: 0px !important;
+    //   padding-inline-start: 0px !important;
 
-    // .notdetails{
-    //     ion-item::part(native) {
-    //         text-align: center;
-    //         padding-inline-end: 0px !important;
-    //         padding-inline-start: 0px !important;
-      
-    //         .item-inner {
-    //           --inner-border-width: 0px;
-    //         }
-    //       }
+    //   .item-inner {
+    //     --inner-border-width: 0px;
+    //   }
     // }
-    // .details{
-    //     ion-item::part(native) {
-    //         text-align: center;
-    //         padding-inline-end: 0px !important;
-    //         padding-inline-start: 0px !important;
-    //         background-color: var(--ion-color-orange-light) !important;
+  }
+}
 
-    //         .item-inner {
-    //           --inner-border-width: 0px;
-    //         }
-    //       }
-    // }
+.item-details,
+.notdetails {
+  ion-item {
+    --background: var(--ion-color-white) !important; // !important;
+  }
+  ion-item::part(native) {
+    text-align: center;
+    padding-inline-end: 0px !important;
+    padding-inline-start: 0px !important;
+    //background: var(--ion-color-white);// !important;
+    .item-inner {
+      --inner-border-width: 0px;
+    }
+  }
+}
+.item-details,
+.details {
+  ion-item {
+    --background: var(--ion-color-orange-light) !important; // !important;
+  }
+  ion-item::part(native) {
+    text-align: center;
+    padding-inline-end: 0px !important;
+    padding-inline-start: 0px !important;
+    //background: var(--ion-color-orange-light) ;//!important;
+
+    .item-inner {
+      --inner-border-width: 0px;
+    }
   }
 }
