--- a/src/global.scss
+++ b/src/global.scss
@@ -221,3 +221,11 @@ ion-tab-bar {
 .float-left {
   float: left;
 }
+
+.alert-head.sc-ion-alert-md{
+  padding: 0px !important;
+}
+
+.alert-head.sc-ion-alert-ios{
+  padding: 0px !important;
+}
