--- a/src/app/components/custom-details/custom-details.component.scss
+++ b/src/app/components/custom-details/custom-details.component.scss
@@ -60,29 +60,18 @@
     .address > ion-label {
       margin-bottom: 6px;
     }
-
-    // ion-item::part(native) {
-    //   text-align: center;
-    //   padding-inline-end: 0px !important;
-    //   padding-inline-start: 0px !important;
-
-    //   .item-inner {
-    //     --inner-border-width: 0px;
-    //   }
-    // }
   }
 }
 
 .item-details,
 .notdetails {
   ion-item {
-    --background: var(--ion-color-white) !important; // !important;
+    --background: var(--ion-color-white) !important;
   }
   ion-item::part(native) {
     text-align: center;
     padding-inline-end: 0px !important;
     padding-inline-start: 0px !important;
-    //background: var(--ion-color-white);// !important;
     .item-inner {
       --inner-border-width: 0px;
     }
@@ -91,13 +80,12 @@
 .item-details,
 .details {
   ion-item {
-    --background: var(--ion-color-orange-light) !important; // !important;
+    --background: var(--ion-color-orange-light) !important;
   }
   ion-item::part(native) {
     text-align: center;
     padding-inline-end: 0px !important;
     padding-inline-start: 0px !important;
-    //background: var(--ion-color-orange-light) ;//!important;
 
     .item-inner {
       --inner-border-width: 0px;
