--- a/src/global.scss
+++ b/src/global.scss
@@ -77,7 +77,7 @@ ion-input {
 
 .btn-custom {
   width: 35%;
-  margin: 0 5%;
+  //margin: 0 5%;
   --color: var(--ion-color-white);
   font-size: 16;
   font-family: "Cairo-Bold";
